# concilia

SrvRestAstroLS_v1/: INVENTARIO.md  debug_headers.py  extract_dates.py  extract_dates_flexible.py  git.txt  globalVar.py  ls_iMotorSoft_Srv01.py  pyproject.toml  temp1.txt  test_date.py  test_upload.py  test_upload_starlette.py
SrvRestAstroLS_v1/_uploads/: Extracto_Ciudad_julio.xlsx
SrvRestAstroLS_v1/clientA/: astro.config.mjs  package.json  pnpm-lock.yaml
SrvRestAstroLS_v1/clientA/src/components/: ThemeSwitcher.svelte  global.js
SrvRestAstroLS_v1/clientA/src/components/agui/: ConciliaApp.svelte  ReconciliarApp.svelte  ReconciliarDetalle.svelte  ReconciliarResumen.svelte  reconcileConfig.ts
SrvRestAstroLS_v1/clientA/src/components/agui/cards/: AprobadosN1Card.svelte  Conciliados11Card.svelte  NoBancoCard.svelte  NoContableCard.svelte  SugeridosN1Card.svelte
SrvRestAstroLS_v1/clientA/src/layouts/: Layout.astro
SrvRestAstroLS_v1/clientA/src/pages/: concilia.astro  index.astro  reconciliar.astro
SrvRestAstroLS_v1/clientA/src/styles/: global.css
SrvRestAstroLS_v1/docs/: INVENTARIO.md  concilia_pipeline_resumen.md  guia_ramas.md  n_to_1_matching.md  syn nube.md
SrvRestAstroLS_v1/routes/v1/: agui_notify.py  chat_concilia.py  ingest_confirm.py  reconcile_details.py  reconcile_quick.py  reconcile_start.py  reconcile_summary.py  uploads_concilia.py  uploads_ingest.py  uploads_v2_concilia.py
SrvRestAstroLS_v1/services/ingest/: sniff_bank.py
SrvRestAstroLS_v1/services/reconcile/: quick_match.py
SrvRestAstroLS_v1/tests/reconcile/: test_matcher.py
(+6 files in other folders)
