[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concilia"
version = "0.1.0"
description = "FX Hub"
authors = [
    { name = "Mario Rojas", email = "mario.rojas@alquimiablue.com" },
]
requires-python = ">=3.11"
dependencies = [
    "litestar==2.18.0",
    "uvicorn",
    "ag-ui-protocol",
    "requests>=2.32.5",
    "asyncpg>=0.30.0",
    "langgraph>=0.6.8",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "tiktoken>=0.11.0",
    "openai>=1.109.1",
    "mlflow>=3.4.0",
    "jsonschema>=4.25.1",
    "python-dateutil>=2.9.0.post0",
    "pytest>=8.4.2",
    "openpyxl>=3.1.5",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.20",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [
    "globalVar.py",
    "ls_iMotorSoft_Srv01.py",
    "routes",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.venv",
]
